[project]
name = "telegrambot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-telegram-bot[job-queue]>=22.5",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
]

[tool.uv]
override-dependencies = [
    "pywin32; sys_platform == 'never'",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
